[gd_scene load_steps=7 format=3 uid="uid://b1k75qqx23vj2"]

[ext_resource type="Script" uid="uid://cjylmo303wx2o" path="res://scenes/items/_physical/ThrownRedBean.gd" id="1_ieo53"]
[ext_resource type="Texture2D" uid="uid://chjvxxnrtrfvk" path="res://assets/items/jellybean_red.png" id="2_yaknc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v8qc4"]
height = 1.32048

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ts7cj"]
albedo_color = Color(0.984556, 0, 0.00390013, 1)

[sub_resource type="SphereMesh" id="SphereMesh_crqg3"]
material = SubResource("StandardMaterial3D_ts7cj")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hsbh8"]
height = 0.5
radius = 0.736184

[node name="ThrownRedBean" type="CharacterBody3D"]
collision_layer = 8
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
floor_max_angle = 1.5708
floor_snap_length = 0.4
script = ExtResource("1_ieo53")
target_texture = ExtResource("2_yaknc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.25, 0)
shape = SubResource("CapsuleShape3D_v8qc4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.46929e-08, 0, -1.184, 0, 0.888, 0, 1.48, 0, -5.17543e-08, 0, 0.2, 0)
mesh = SubResource("SphereMesh_crqg3")

[node name="DespawnTimer" type="Timer" parent="."]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 14

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_hsbh8")

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
